# linux-dev-2020

03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile  outlib.h  prog.c
05_Environmental/: CMakeLists.txt  README.md  main.c  pcre.c  pcre.h
06_Debugging/: main.c
07_DebuggingTracing/: CMakeLists.txt  test1.sh  test2.sh  unlinkat_wrapper.c
08_TestingCoverage/: Makefile.am  configure.ac
08_TestingCoverage/src/: Makefile.am  buf.h
08_TestingCoverage/tests/: Makefile.am  test_clear.ts  test_grow_trunc.ts  test_init_free.ts  test_pop.ts  test_push_brackets.ts
09_I18nL10n/: Makefile.am  main.c
10_Documenting/: binarysearch.pot  binarysearch_ru.po  main.c
11_Toolkits/: Makefile  main.c
13_PatchInstall/: Makefile.am  binarysearch.pot  binarysearch_ru.po  configure.ac
